Fixed problem with title block not taking up phone full of screen on mobile devices

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
     font-size: 3vh;
     padding: 3vh 0;
     border: .25vh solid white;
-    max-width: 400px;
+    max-width: 450px;
 }
 
 #title > p {
